added some non-functional requirements and 3 terms to the glossary

--- a/requirements_document.tex
+++ b/requirements_document.tex
@@ -75,4 +75,21 @@
 \item The software should also be able to provide a printable report based on query output.
 \end{itemize}
 
+\section{Non-Functional Requirements}
+\begin{itemize}
+\item The results of an SQL query should be displayed within 5 seconds. 
+\item An SQL query should have a 100\% accuracy of the results that are returned back to the user. 
+\item If a user's response triggers a hidden question it should be displayed on the screen within 1 second.
+\item The interfaces for creating a query and a survey should be easy to use by anybody and it should not take them more than an 30 minutes to figure out how to use both of these interfaces. 
+\item Submitted survey responses should not take longer than 2 minutes to be stored in the database. 
+\item The database should be able to store 25 years worth of information. 
+\end{itemize}
+
+\section{Glossary}
+\begin{itemize}
+\item User - A person that will be interacting and using the product.
+\item Query - Extracts information from the database based on the criteria that the user entered.
+\item Database - A collection of information that is organized, so that it can be easy to modify and find information. 
+\end{itemize}
+
 \end{document}
