--- a/requirements_document.tex
+++ b/requirements_document.tex
@@ -32,23 +32,71 @@
 \maketitle
 \section{Introduction}
 \subsection{Purpose}
+This software requirements specification is intended to define the requirements of the project of developing a database 
+of surveys for STEM Academy. Defined requirements will allow for a contract between us, the developers, and Stem Academy, 
+our clients, on what STEM Academy wants us to deliver in their desired software. This document is intended for review and
+reference by both the developers and the clients.
 \subsection{Scope}
+The product outlined in this requirements document wil be [OUR NAME HERE]. The product will need to be able to store survey
+questions and responses from students to those questions. It will need to take those responses and generate data reports
+based on queries to the database, such as summary or demographic data. This product is intended to ease the distribution of
+surveys and collection of data for STEM Acadamey so they can more easily provide this information to sponsors and on
+applications for funding. % I'm pretty sure there's a better way of explaining this. -Kyle. 
 \subsection{Definitions}
 \begin{itemize}
-\item User - A person that will be interacting and using the product.
-\item Query - Extracts information from the database based on the criteria that the user entered.
+\item Data analyst - A user that uses the product to generate a report based on survey response data.
 \item Database - A collection of information that is organized, so that it can be easy to modify and find information. 
+\item Matrix question - A multi-part question where each part is a row that has several options for response. All parts have the
+same answer choices.
+\item Multiple choice question - A question where the response is a selection from different options, and only one selection
+is possible.
+\item Query - Extracts information from the database based on the criteria that the user entered.
+\item Question - A grammatical question that is represented in our database with associated responses.
+\item Question type - Questions can vary based on the kind of response desired (multiple choice, text entry, etc.). % Shannon, is this what you meant? -Kyle.
+\item Survey builder - A user that creates surveys on the database.
+\item Survey taker - A user that provides answers to surveys existing on the database. These responses are stored in
+the database.
+\item Template question - A question that follows a general structure. This can be edited to change some wording that can
+vary between surveys (such as the material taught) while the general structure stays the same.
+\item Text entry question - A question where the response is a box that allows the user to answer with a string of text.
+\item User - A person that will be interacting and using the product.
 \end{itemize}
 \subsection{References}
+% Do we have any outside information in this that must be cited? I haven't seen any. -Kyle.
 \subsection{Overview}
+The software requirements specification is organized as follows with a description of the overall product, the specific requirements of the
+product, and functional requirements of the product. The product description will include % finish after rest of the document done -Kyle.
 \section{Overall Description}
+
 \subsection{Product Perspective}
+The product will be wholly self-contained, as it is intended as a product to specially satisfy the needs of STEM Academy's survey
+process. The user interface should be designed in such a way that user's do not need a knowledge of SQL queries to be able
+to query the database to generate reports. An example would be a list of common actions that they can perform on the database
+and text fields to retrieve information necessary for the SQL query. This web user interface will connect with the database management
+software we use for our product.
 \subsection{Product Functions}
+The basic functionality of the product will be that a user can log on to a web page as either a survey builder,
+a survey taker or a data analyst. The survey builder can then create surveys that can be stored on the database as a survey with a
+list of questions associated with it. A survey taker can log on to the web site and take a survey stored on the database,
+while the responses they provide to survey questions are also stored on the database with an association with the user
+and the question involved. A data analyst can log on to the web site and query the database to generate a report on
+information desired.
 \subsection{User Characteristics}
+The users of the software follow two basic characteristic sets. The first are survey builders and data analysts that are members of
+STEM Academy. These users are educated and have experience in creating surveys and understanding data from surveys,
+however they are also non-technical in regards to this kind of product. The other type of user are the survey takers, who are
+generally either grade school students or parents of grade school students. The education and the experience in STEM fields
+can very in this type of user, from minimal to deep, though most will be minimal. The technical knowledge wiill also vary, though
+most are likelly to have the required knowledge to navigate a web page.
 \subsection{Constraints}
+% This one I am not sure of. The only thing I can think of is the possibility of regulatory policies if we get to use on-campus resources -Kyle.
 \subsection{Assumptions and Dependencies}
+For this product, we assume that we will have access to a resource on campus that can store a large amount of information on
+surveys and responses. % This is all I've got -Kyle.
 \section{Specific Requirements}
+% I don't get what makes this different from other sections. Might ask Kristin about this one as well. -Kyle.
 \subsection{External Interface Requirements}
+% Same as above. I feel like I could use a better explanation than the standards doc here. -Kyle.
 \subsubsection{User Interface}
 The user interface will be a website. There are two views: administration and survey taker. 
 The Administration view is for those creating surveys and analyzing data. They will input a 
