Added some terms and wrote a different version of scope subsection

--- a/requirements_document.tex
+++ b/requirements_document.tex
@@ -37,15 +37,22 @@ of surveys for STEM Academy. Defined requirements will allow for a contract betw
 our clients, on what STEM Academy wants us to deliver in their desired software. This document is intended for review and
 reference by both the developers and the clients.
 \subsection{Scope}
-The product outlined in this requirements document wil be [OUR NAME HERE]. The product will need to be able to store survey
+The product outlined in this requirements document will be [OUR NAME HERE]. The product will need to be able to store survey
 questions and responses from students to those questions. It will need to take those responses and generate data reports
 based on queries to the database, such as summary or demographic data. This product is intended to ease the distribution of
 surveys and collection of data for STEM Acadamey so they can more easily provide this information to sponsors and on
 applications for funding. % I'm pretty sure there's a better way of explaining this. -Kyle. 
+
+
+ The software products that will be produced include a survey generator, a database that stores surveys based on the student’s camp/club/program, and a report generator that uses custom queries to generate results.  The goal of the software is to help STEM Academy to obtain more funding for their camps/clubs/programs. The benefits that the software will have on STEM Academy is that they will be able to produce reports quickly which will save them a significant amount of time by not having to tabulate results by hand and it will prevent survey results from being untabulated.  In addition, they will no longer have to verify their survey results since the software will generate results that are 100\% accurate. Another benefit that the software will have on STEM Academy is that student survey information will be stored in a secure database instead of a file system and it will also save them space by not having to purchase more file cabinets as their program expands overtime.  % I looked at the scope subsection and wrote about things it requires and you can delete this if you think it is not necessary to include - Javier 
+
 \subsection{Definitions}
 \begin{itemize}
+\item Contract - A legally binding document that is agreed upon by the customer and developers.  %Added the terms contract, customer, and developers -Javier 
+\item Customer - The person, or persons, who will be receiving the final product and provide feedback to the developers, so that they can meet the requirements for their desired product. 
 \item Data analyst - A user that uses the product to generate a report based on survey response data.
 \item Database - A collection of information that is organized, so that it can be easy to modify and find information. 
+\item Developers - A group of people who will build a product for a customer.
 \item Matrix question - A multi-part question where each part is a row that has several options for response. All parts have the
 same answer choices.
 \item Multiple choice question - A question where the response is a selection from different options, and only one selection
@@ -85,8 +92,8 @@ information desired.
 The users of the software follow two basic characteristic sets. The first are survey builders and data analysts that are members of
 STEM Academy. These users are educated and have experience in creating surveys and understanding data from surveys,
 however they are also non-technical in regards to this kind of product. The other type of user are the survey takers, who are
-generally either grade school students or parents of grade school students. The education and the experience in STEM fields
-can very in this type of user, from minimal to deep, though most will be minimal. The technical knowledge wiill also vary, though
+generally either grade school students or the parents of the students. The education and the experience in STEM fields
+can vary in this type of user, from minimal to deep, though most will be minimal. The technical knowledge will also vary, though
 most are likelly to have the required knowledge to navigate a web page.
 \subsection{Constraints}
 % This one I am not sure of. The only thing I can think of is the possibility of regulatory policies if we get to use on-campus resources -Kyle.
