changed section and sub-section format to 1, 1.1, 1.1.1

--- a/requirements_document.tex
+++ b/requirements_document.tex
@@ -24,6 +24,12 @@
     \par\noindent\makebox[2.5in]{\hrulefill} \hfill\makebox[2.0in]{\hrulefill}%
     \par\noindent\makebox[2.5in][l]{#1}      \hfill\makebox[2.0in][l]{Date}%
 }%
+
+%This changes the format for the section, sub-section, and sub-sub-section to 1, 1.1, 1.1.1
+\renewcommand\thesectiondis{\arabic{section}}
+\renewcommand\thesubsectiondis{\thesectiondis.\arabic{subsection}}
+\renewcommand\thesubsubsectiondis{\thesubsectiondis.\arabic{subsubsection}}
+
 \begin{document}
 
 \title{Requirements Document}
